--- a/.github/workflows/package-repo.yml
+++ b/.github/workflows/package-repo.yml
@@ -9,7 +9,7 @@ on:
       - ".env.template"
       - ".gitattributes"
       - ".github/workflows/mlops-pipeline.yml"
-      - ".github/workflows/zip-repository.yml"
+      - ".github/workflows/package-repo.yml"
       - ".gitignore"
       - "configs/**"
       - "dvc.lock"
@@ -39,61 +39,25 @@ env:
 jobs:
   package-repo:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-
-      - name: Set Environment Variables
-        run: |
-          echo "REPO_ROOT=$GITHUB_WORKSPACE" >> $GITHUB_ENV
-          echo "TEMP_DIR=$GITHUB_WORKSPACE/temp_repo" >> $GITHUB_ENV
-          echo "ZIP_FILENAME=Final_Project_Team_3_Deliverable_3.zip" >> $GITHUB_ENV
-          echo "ZIP_FILEPATH=$GITHUB_WORKSPACE/$ZIP_FILENAME" >> $GITHUB_ENV
-          echo "GZIPPED_ZIP_FILEPATH=$ZIP_FILEPATH.gz" >> $GITHUB_ENV
-          echo "FILES_LIST=$GITHUB_WORKSPACE/files_to_zip.txt" >> $GITHUB_ENV
-
-      - name: Print Environment Variables
-        run: |
-          echo "REPO_ROOT: $REPO_ROOT"
-          echo "TEMP_DIR: $TEMP_DIR"
-          echo "ZIP_FILENAME: $ZIP_FILENAME"
-          echo "ZIP_FILEPATH: $ZIP_FILEPATH"
-          echo "GZIPPED_ZIP_FILEPATH: $GZIPPED_ZIP_FILEPATH"
-          echo "FILES_LIST: $FILES_LIST"
-          echo "Current directory: $(pwd)"
-          ls -la
-
-      - name: Cache Apt Packages
-        uses: actions/cache@v3
-        with:
-          path: /var/cache/apt/archives
-          key: ${{ runner.os }}-apt-${{ hashFiles('/etc/apt/sources.list') }}
-          restore-keys: |
-            ${{ runner.os }}-apt-
+          fetch-depth: 1
 
       - name: Install System Dependencies
         run: sudo apt-get install -y pigz zip
 
-      - name: Delete Old Zipfile
-        run: |
-          if [ -f "$GZIPPED_ZIP_FILEPATH" ]; then
-            rm "$GZIPPED_ZIP_FILEPATH"
-            echo "Deleted previous zipped Zipfile"
-          elif [ -f "$ZIP_FILEPATH" ]; then
-            rm "$ZIP_FILEPATH"
-            echo "Deleted previous Zipfile"
-          else
-            echo "No previous Zipfile found"
-          fi
-
       - name: Create File List
         run: |
-          cat << EOF > "$FILES_LIST"
+          cat << EOF > files_to_zip.txt
           .dvcignore
           .env.template
+          .gitattributes
           .github/workflows/mlops-pipeline.yml
+          .gitignore
           configs/
           dvc.lock
           dvc.yaml
@@ -108,71 +72,30 @@ jobs:
           terraform/
           EOF
 
-      - name: Create Temporary Directory
-        run: mkdir -p "$TEMP_DIR"
-
-      - name: Copy Files to Temporary Directory
-        run: |
-          while IFS= read -r file || [ -n "$file" ]; do
-            if [ -d "$file" ]; then
-              mkdir -p "$TEMP_DIR/$file"
-              cp -r "$file" "$TEMP_DIR/$file"
-            elif [ -f "$file" ]; then
-              mkdir -p "$(dirname "$TEMP_DIR/$file")"
-              cp "$file" "$TEMP_DIR/$file"
-            else
-              echo "Warning: $file does not exist."
-            fi
-          done < "$FILES_LIST"
-
-          echo "Contents of TEMP_DIR:"
-          ls -R "$TEMP_DIR"
-
-      - name: Remove Unwanted Files
-        run: |
-          find "$TEMP_DIR" -type f \( -name '.gitignore' -o -name '.gitattributes' -o -name '.gitkeep' \) -exec rm -f {} +
-          echo "Contents of TEMP_DIR after removing unwanted files:"
-          find "$TEMP_DIR"
-
       - name: Zip Repository
-        run: |
-          cd "$TEMP_DIR"
-          if zip -r "$ZIP_FILEPATH" .; then
-            echo "ZIP file created successfully"
-            if pigz -9 "$ZIP_FILEPATH"; then
-              echo "ZIP file compressed successfully"
-            else
-              echo "Error: Failed to compress ZIP file with pigz"
-              exit 1
-            fi
-          else
-            echo "Error: Failed to create ZIP file"
-            exit 1
-          fi
+        run: zip -r -0 $(cat files_to_zip.txt) | pigz -9 > Final_Project_Team_3_Deliverable_3.zip
 
       - name: Cleanup
-        run: rm -rf "$TEMP_DIR"
+        run: rm -f files_to_zip.txt
 
-      - name: Get Zipfile Size
-        run: |
-          FILESIZE=$(du -h "$GZIPPED_ZIP_FILEPATH" | cut -f1)
-          echo "FILESIZE=$FILESIZE" >> $GITHUB_ENV
+      - name: Check zip file size
+        run: ls -lh Final_Project_Team_3_Deliverable_3.zip
 
       - name: Configure Git
         run: |
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
 
-      - name: Push to Remote
+      - name: Commit and push zip file
         run: |
-          git add "$GZIPPED_ZIP_FILEPATH"
-          git commit -m "Size: $FILESIZE"
-          git pull
-          git push
+          git add Final_Project_Team_3_Deliverable_3.zip
+          git commit -m "Update Final_Project_Team_3_Deliverable_3.zip"
+          git pull origin main
+          git push origin main
 
       - name: Repository Dispatch
         uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.AAI540_GROUP3_DISPATCH_TOKEN }}
-          repository: ${{ env.REPO_NAME }}
-          event-type: ${{ env.EVENT_TYPE }}
+          repository: aai540-group3/project
+          event-type: create-release
